--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-responsive": "^9.0.2",
 		"react-router-dom": "^6.18.0",
 		"react-scripts": "5.0.1",
+		"react-scroll": "^1.9.0",
 		"react-slick": "^0.29.0",
 		"sass": "^1.66.1",
 		"slick-carousel": "^1.8.1",
